--- a/TwitchBot.Server/TwitchBot.Server.csproj
+++ b/TwitchBot.Server/TwitchBot.Server.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Enums.NET" Version="3.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.4" />
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0" />
